Fix grid sizing and recolor dark mode about card

--- a/src/components/about-card/AboutCard.css
+++ b/src/components/about-card/AboutCard.css
@@ -10,13 +10,14 @@
     width:50vw;
     max-width: 400px;
     align-items:center;
-    margin:0 auto;
+    margin:0 auto 50px auto;
     flex-shrink:initial;
     background-color:#F5F5F5;
 
-    height:150vh;
+    height:180vh;
+    box-shadow: 0px 0px 40px rgb(205, 205, 205);
     
-    padding-top:20px;
+    margin-top:20px;
     border-radius: 20px;
     font-family: Inter;
 }
@@ -32,6 +33,7 @@
 .about-card--dark {
     background-color:#333333;
     color:#cecece;
+    box-shadow: 0px 0px 40px rgb(94, 94, 94);
 }
 
 .info--img >img {
@@ -61,13 +63,19 @@
 
 .info--title {
     font-weight:300;
-    font-size:1.1rem;
-    color: #9972e0;
+    font-size:1.3rem;
+    color: var(--header-dark-text);
+}
+
+.info--title-dark {
+    font-weight:300;
+    font-size:1.3rem;
+    color: var(--header-light-text);
 }
 
 .info--link{
     font-weight:300;
-    font-size:1rem;
+    font-size:1.3rem;
 }
 
 .info--item {
@@ -76,7 +84,7 @@
 }
 
 .about {
-    margin:20px 40px;
+    margin:10px 30px;
     text-align:left;
     padding:0;
 }
@@ -85,20 +93,20 @@
     padding:0;
     margin:10px 0px;
     font-weight:600;
-    font-size:1.2rem;
-    line-height:1.1rem;
+    font-size:1.3rem;
+    /* line-height:1.1rem; */
 }
 
 .about--text {
     padding:0;
     margin:0;
     font-weight:300;
-    font-size: 0.9rem;
-    line-height:1.1rem;
+    font-size: 1.3rem;
+    /* line-height:1.3rem; */
 }
 
 .interests {
-    margin:20px 40px;
+    margin:10px 30px;
     text-align:left;
     padding:0;
 }
@@ -115,8 +123,8 @@
     padding:0;
     margin:0;
     font-weight:300;
-    font-size: 0.9rem;
-    line-height:1.1rem;
+    font-size: 1.3rem;
+    /* line-height:1.3rem; */
 }
 
 .footer {
