--- a/src/components/threejsdemo/ThreeScene.css
+++ b/src/components/threejsdemo/ThreeScene.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction:column;
     align-items: center;
-    background-color: #f7f4ec; /* #F9F7F0; */
+    background-color: #ededed; /* #F9F7F0; */
     padding-block:20px;
     margin:auto;
     width:30vw;
